# alt-z

./: .gitignore  ARCHITECTURE_ja.md  IMPLEMENTATION_ja.md  Makefile  README.md  README_ja.md  REQUIREMENTS_ja.md  az.fish  az.sh  benchmark_runner.sh  test_az_fish.fish  test_az_sh.sh  test_z_sh.sh  z.sh
archive/python/: z.sh
bench/: benchmark_gen_data.py  run_benchmark.py
docs/: COMMAND_NOT_FOUND_FALLBACK.md
python/: test_integration.py
python/src/: common.py  main.py  z_add.py  z_clean.py  z_query.py
rust/: Cargo.toml
rust/src/: cmd_add.rs  cmd_clean.rs  cmd_query.rs  lib.rs  main.rs
tests/: test_az_bash_fallback.sh  test_az_fish.fish  test_az_fish_fallback.fish  test_az_sh.sh
