[package]
name = "alt-z"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
csv = "1"
fs2 = "0.4"
anyhow = "1"
chrono = "0.4"
regex = "1"
shellexpand = "2"

[profile.release]
opt-level = 3
lto = true              # リンク時最適化（さらに高速化）
codegen-units = 1       # 最大最適化（コンパイル時間は長くなる）
panic = 'abort'         # パニック時は即座に終了
strip = true            # デバッグ情報を完全に削除
